# spotify-stats

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: api_router.py  celery_app.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
media/: Streaming_History_Video_2024_yPS4cHk.json
spotify_stats/analytics/: apps.py  exceptions.py  factories.py  models.py  service.py  services.py  spotify_client.py  tasks.py
spotify_stats/analytics/api/v1/: filters.py  serializers.py  views.py
spotify_stats/analytics/migrations/: 0001_initial.py  0002_fileuploadjob.py  0003_rename_streaminghistory_listeninghistory.py  0004_listeninghistory_unique_user_played_at.py  0005_spotifyprofile.py
spotify_stats/analytics/services/: __init__.py  albums_response.json  analytics.py  artists_response.json  database.py  file_processing.py  file_processor.py  spotify_api_parser.py  spotify_api_processor.py  spotify_auth.py  spotify_client.py  spotify_clients.py  spotify_data_processing.py  spotify_processor.py  tracks_response.json  user_spotify_client.py  utils.py
spotify_stats/analytics/tests/: factories.py  test_factories.py  test_models.py  test_service.py  test_tasks.py
spotify_stats/analytics/tests/services/: test_analytics.py
spotify_stats/api/v1/: urls.py
spotify_stats/catalog/: apps.py  models.py
spotify_stats/catalog/migrations/: 0001_initial.py  0002_alter_track_album_alter_track_artist.py  0003_track_unique_artist_album_spotify_track_uri.py  0004_remove_album_artist_albumartist.py  0005_album_primary_artist_alter_albumartist_album_and_more.py  0006_trackartist_and_more.py  0007_trackalbum_and_more.py  0008_rename_spotify_track_uri_track_spotify_uri.py  0009_alter_album_primary_artist.py  0010_album_artists_alter_albumartist_album_and_more.py  0011_remove_track_spotify_uri_track_spotify_id.py  0012_remove_track_albums_track_album_delete_trackalbum.py  0013_remove_album_unique_album_name_primary_artist_and_more.py  0014_alter_track_album.py  0015_album_cover_url_artist_cover_url.py  0016_album_spotify_id_artist_spotify_id.py
spotify_stats/catalog/tests/: factories.py  test_factories.py  test_models.py
spotify_stats/core/: apps.py  models.py
spotify_stats/core/api/: pagination.py
spotify_stats/users/: admin.py  apps.py  models.py
spotify_stats/users/migrations/: 0001_initial.py  0002_alter_user_options.py
spotify_stats/users/tests/: factories.py  test_factories.py
(+20 files in other folders)
